--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ava": "^0.19.1",
     "babel-core": "^6.24.1",
     "babel-loader": "7.0.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "bluebird": "^3.5.0",
+    "ramda": "^0.24.1"
   }
 }
