--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.0",
     "ramda": "^0.24.1"
+  },
+  "dependencies": {
+    "lz-string": "^1.4.4"
   }
 }
