--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-loader": "7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.0",
-    "ramda": "^0.24.1"
+    "dotenv-webpack": "^1.5.0",
+    "ramda": "^0.24.1",
+    "webpack": "^2.6.1"
   },
   "dependencies": {
     "lz-string": "^1.4.4"
