Backend integration refactoring

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-ENDPOINT_DATA=http://localhost:3001/data/%data%
-ENDPOINT_ERROR=http://localhost:3001/error/%data%
+ENDPOINT_DATA=https://my.server/data/%placeholder%
+ENDPOINT_ERROR=https://my.server/error/%placeholder%
