--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.0",
     "dotenv-webpack": "^1.5.0",
+    "micro": "^7.3.3",
     "ramda": "^0.24.1",
+    "superagent": "^3.5.2",
     "webpack": "^2.6.1"
   },
   "dependencies": {
